# group-member-approval-smart-contract

./: Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
.github/: CODEOWNERS
.github/workflows/: quality_check.yaml  release.yaml
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
docs/group_member_approval_smart_contract/: all.html  index.html  sidebar-items.js
docs/group_member_approval_smart_contract/contract/: fn.execute.html  fn.instantiate.html  fn.migrate.html  fn.query.html  index.html  sidebar-items.js
docs/group_member_approval_smart_contract/execute/: index.html  sidebar-items.js
docs/group_member_approval_smart_contract/instantiate/: index.html  sidebar-items.js
docs/group_member_approval_smart_contract/migrate/: index.html  sidebar-items.js
docs/group_member_approval_smart_contract/query/: index.html  sidebar-items.js
docs/group_member_approval_smart_contract/store/: index.html  sidebar-items.js
docs/group_member_approval_smart_contract/types/: index.html  sidebar-items.js
docs/group_member_approval_smart_contract/util/: index.html  sidebar-items.js
examples/: schema.rs
kotlin-tools/: README.md  build.gradle.kts  settings.gradle.kts
kotlin-tools/buildSrc/: build.gradle.kts
kotlin-tools/client/: build.gradle.kts
kotlin-tools/devtools/: build.gradle.kts
kotlin-tools/gradle/: libs.versions.toml
schema/: contract_state.json  execute_msg.json  instantiate_msg.json  query_msg.json
src/: contract.rs  lib.rs
src/execute/: approve_group_membership.rs  mod.rs
src/instantiate/: instantiate_contract.rs  mod.rs
src/migrate/: contract_upgrade.rs  mod.rs
src/query/: mod.rs  query_contract_state.rs
src/store/: contract_state.rs  mod.rs
src/test/: mod.rs  test_constants.rs  test_helpers.rs  test_instantiate.rs
src/types/: mod.rs
src/types/core/: error.rs  mod.rs  (+1 more)
src/util/: mod.rs  prov_helpers.rs  route_helpers.rs
(+118 files in other folders)
