[package]
name = "group-member-approval-smart-contract"
version = "1.0.0"
authors = ["Jake Schwartz <jschwartz@figure.com>", "Pierce Trey <ptrey@figure.com>"]
edition = "2021"

exclude = [
    "group_member_approval_smart_contract.wasm",
    "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-std = { version = "=1.1.9", default-features = false }
cosmwasm-storage = "=1.1.9"
cw-storage-plus = "=0.16.0"
provwasm-std = "=1.1.2"
result-extensions = "=1.0.2"
schemars = "=0.8.12"
semver = "=1.0.16"
serde = { version = "=1.0.152", default-features = false, features = ["derive"] }
thiserror = "=1.0.39"

[dev-dependencies]
cosmwasm-schema = "=1.1.9"
provwasm-mocks = "=1.1.2"
