[package]
name = "group-member-approval-smart-contract"
version = "1.0.3"
authors = ["Jake Schwartz <jschwartz@figuremarkets.com>", "Pierce Trey <ptrey@figuremarkets.com>"]
edition = "2021"

exclude = [
    "group_member_approval_smart_contract.wasm",
    "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-std = { version = "=2.1.3", default-features = false, features = ["cosmwasm_2_1", "stargate", "std"] }
cosmwasm-storage = "=1.1.9"
cw-storage-plus = "=2.0.0"
provwasm-std = "=2.4.0"
result-extensions = "=1.0.2"
schemars = "=0.8.16"
semver = "=1.0.16"
serde = { version = "=1.0.197", default-features = false, features = ["derive"] }
thiserror = "=1.0.58"

[dev-dependencies]
cosmwasm-schema = "=1.1.9"
provwasm-mocks = "=2.4.0"
